--- a/app/templates/Add_entrytype.html
+++ b/app/templates/Add_entrytype.html
@@ -12,29 +12,19 @@
 				<div class="tab-content">
 
 					<div id="settings" class="  active">
-						<div class="row no-mrg">
-							<h3>Add Fee Catagory</h3>
+						
+							<h3>Add entry type</h3>
 							<div class="edit-pro">
 								<div class="form-outline mb-4">
-									<label>category Name</label>
-									<input type="text" class="form-control" placeholder="Enter state Name" value=""name="name" id="name" required >
+									<label>entry type Name</label>
+									<input type="text" class="form-control" placeholder="Enter entry type Name" value=""name="name" id="name" required >
 								</div>
 								<div class="form-outline mb-4">
-									<label>Fee Type:</label>
-									  <select  class="form-control" id="fee_type" name="fee_type" id="fee_type" required>>
-										<option value="">Choose...</option>
-										<option value="Mandatory">Mandatory</option>
-										<option value="Recursive">Recursive</option>
-										<option value="Optional">Optional</option>
-									  </select>
-
-								</div>
-								 <div class="form-outline mb-4">
 									<label>Acronym</label>
 									<input type="text" class="form-control" placeholder="acronym" value=""name="acronym" id="acronym" required >
 								</div> 
 
-								<div class="col-sm-12">
+								<div class="form-outline mb-4">
 									<button type="submit" class="btn btn-primary theme-bg full-width">Add</button>
 								</div>
 							</div>
