--- a/app/templates/address/Add_city.html
+++ b/app/templates/address/Add_city.html
@@ -3,48 +3,23 @@
 {% load static %}
 
 
-<div class="clearfix"></div>
-
-<!-- Title Header Start -->
-<section class="inner-header-title" style="background-image:url(assets/img/banner-10.jpg);">
-	<div class="container">
-<!--		<h1>Admin</h1>-->
-	</div>
-</section>
-<div class="clearfix"></div>
-<!-- Title Header End -->
-
-<!-- Candidate Profile Start -->
-<section class="detail-desc advance-detail-pr gray-bg">
-
-</section>
-
-<section class="full-detail-description full-detail gray-bg">
-<div class="container">
-	<div class="col-md-12 col-sm-12">
+<div class="container  justify-content-center">
+	{% comment %} <div class="col-md-12 col-sm-12"> {% endcomment %}
 		<div class="full-card">
-		  <div class="deatil-tab-employ tool-tab">
-				<ul class="nav simple nav-tabs" id="simple-design-tab">
-					<li><a href="#settings">City</a></li>
-				</ul>
 				<form class="" method="POST" action= "" enctype="multipart/form-data">
                     {% csrf_token %}
-				<!-- Start All Sec -->
-				<div class="tab-content">
-
-					<div id="settings" class="  active">
 						<div class="row no-mrg">
 							<h3>Add City</h3>
 							<div class="edit-pro">
-								<div class="col-md-4 col-sm-6">
+								<div class="form-outline mb-4">
 									<label>City Name</label>
 									<input type="text" class="form-control" placeholder="Enter City Name" value=""name="name" id="name" required >
 								</div>
-								<div class="col-md-4 col-sm-6">
+								<div class="form-outline mb-4">
 									<label>Acronym</label>
 									<input type="text" class="form-control" placeholder="acronym" value=""name="acronym" id="acronym" required >
 								</div>
-								<div class="col-md-4 col-sm-6">
+								<div class="form-outline mb-4">
 									<label>Talluk</label>
 
                                         <select class="form-control" name="talluk"  id="talluk" required>
@@ -59,7 +34,7 @@
                                         </select>
 
 								</div>
-                                <div class="col-md-4 col-sm-6">
+                                <div class="form-outline mb-4">
 									<label>District</label>
 
                                         <select class="form-control" name="dist"  id="dist" required>
@@ -75,12 +50,12 @@
 
 								</div>
 
-								<div class="col-sm-12">
+								<div class="form-outline mb-4">
 									<button type="submit" class="btn btn-primary theme-bg full-width">Add</button>
 								</div>
 							</div>
 						</div>
-					</div>
+					
 					<!-- End Settings -->
 				</div>
 				<!-- Start All Sec -->
