--- a/app/templates/address/Add_country.html
+++ b/app/templates/address/Add_country.html
@@ -3,65 +3,43 @@
 {% load static %}
 
 
-<div class="clearfix"></div>
 
-<!-- Title Header Start -->
-<section class="inner-header-title" style="background-image:url(assets/img/banner-10.jpg);">
-	<div class="container">
-<!--		<h1>Admin</h1>-->
-	</div>
-</section>
-<div class="clearfix"></div>
-<!-- Title Header End -->
 
-<!-- Candidate Profile Start -->
-<section class="detail-desc advance-detail-pr gray-bg">
 
-</section>
 
-<section class="full-detail-description full-detail gray-bg">
-<div class="container">
-	<div class="col-md-12 col-sm-12">
+
+<div class="container d-flex justify-content-center">
+	{% comment %} <div class="col-md-12 col-sm-12"> {% endcomment %}
 		<div class="full-card">
-		  <div class="deatil-tab-employ tool-tab">
-				<ul class="nav simple nav-tabs" id="simple-design-tab">
-					<li><a href="#settings">Country</a></li>
-				</ul>
-				<form class="" method="POST" action= "" enctype="multipart/form-data">
+		  
+				
+				<form class="justify-content-center" method="POST" action= "" enctype="multipart/form-data">
                     {% csrf_token %}
-				<!-- Start All Sec -->
-				<div class="tab-content">
-
-					<div id="settings" class="  active">
 						<div class="row no-mrg">
 							<h3>Add Country</h3>
 							<div class="edit-pro">
-								<div class="col-md-4 col-sm-6">
+								<div class="form-outline mb-4">
 									<label>Country Name</label>
 									<input type="text" class="form-control" placeholder="Enter Country Name" value=""name="name" id="name" required >
 								</div>
-								<div class="col-md-4 col-sm-6">
+								<div class="form-outline mb-4">
 									<label>Acronym</label>
 									<input type="text" class="form-control" placeholder="acronym" value=""name="acronym" id="acronym" required >
 								</div>
-								<div class="col-md-4 col-sm-6">
+								<div class="form-outline mb-4">
 									<label>Country Code</label>
 									<input type="text" class="form-control" placeholder="Enter Country Code" value=""name="country_code" id="country_code" required >
 								</div>
 
-								<div class="col-sm-12">
-									<button type="submit" class="btn btn-primary theme-bg full-width">Add</button>
+								<div class="col-sm-16">
+									<button type="submit" class="btn btn-primary theme-bg full-width">Submit</button>
 								</div>
-							</div>
 						</div>
-					</div>
-					<!-- End Settings -->
-				</div>
-				<!-- Start All Sec -->
-            </form>
+						
+			  </form>
 			</div>
-		</div>
-	</div>
 </div>
-</section>
-{% endblock %}
+
+
+
+  {% endblock %}
