--- a/app/templates/address/Talluk_view.html
+++ b/app/templates/address/Talluk_view.html
@@ -6,11 +6,11 @@
 <!--    <div class="clearfix"></div>-->
 
 <!-- Title Header Start -->
-<section class="inner-header-title" style="background-image:url(assets/img/banner-10.jpg);">
-<div><h1>{{title}}</h1></div>
-</section>
-<div><div style="margin:20px"> {{title}} <td><a href="{% url 'app:Add_talluk' %}" class="btn-sm  btn-primary" id="Add" style="float:right;margin-right:60px">Add</a></div></div>
-<table class="my-table">
+<div class="container justify-content-center">
+<div><h1>{{title}}</h1> <a href="{% url 'app:Add_talluk' %}" class="btn-sm  btn-primary " id="Add" style="float:right; text-decoration: none;">Add New Data</a></div>
+<br>
+<br>
+<table id="user-roles-records" class="table table-responsive-md table-bordered table-sm table-striped justify-content-center"cellspacing="0" width="100%">
   <thead>
     <tr>
         <th>ID</th>
@@ -35,12 +35,12 @@
         {% else %}
       <td> Disabled</td>
       {% endif %}
-        <td><a href="{% url 'app:edit_Talluk' id=item.id %}" class="btn btn-sm btn-primary" id="edit">Edit</a>
+        <td><a href="{% url 'app:edit_Talluk' id=item.id %}" class="btn btn-sm btn-success bi bi-pencil-square"id="edit">Edit</a>
 
           {% if item.status == True %}
-          <a href="{% url 'app:Status_update_Talluk'  action='active' id=item.id  %}" class="btn btn-sm btn-info" id="activbtn">Active </a>
+          <a href="{% url 'app:Status_update_Talluk'  action='active' id=item.id  %}" class="btn btn-sm btn-primary" id="activbtn"><i class="bi bi-eye"></i>Active </a>
             {% else %}
-          <a href="{% url 'app:Status_update_Talluk'  action='deactive' id=item.id %}" class="btn btn-sm btn-warning" id="deactive">Disabled </a>
+          <a href="{% url 'app:Status_update_Talluk'  action='deactive' id=item.id %}" class="btn btn-sm btn-warning" id="deactive"><i class="bi bi-eye-slash"></i>Disabled </a>
           {% endif %}
           <a href="{% url 'app:delete_Talluk' id=item.id %}" class="btn btn-sm btn-danger" id="delete">Delete</a>
       </td>
