--- a/app/templates/address/edit_pincode.html
+++ b/app/templates/address/edit_pincode.html
@@ -3,30 +3,9 @@
 {% load static %}
 
 
-<div class="clearfix"></div>
-
-<!-- Title Header Start -->
-<section class="inner-header-title" style="background-image:url(assets/img/banner-10.jpg);">
-	<div class="container">
-<!--		<h1>Admin</h1>-->
-	</div>
-</section>
-<div class="clearfix"></div>
-<!-- Title Header End -->
-
-<!-- Candidate Profile Start -->
-<section class="detail-desc advance-detail-pr gray-bg">
-
-</section>
-
-<section class="full-detail-description full-detail gray-bg">
-<div class="container">
-	<div class="col-md-12 col-sm-12">
+<div class="container d-flex justify-content-center">
+	{% comment %} <div class="col-md-12 col-sm-12"> {% endcomment %}
 		<div class="full-card">
-		  <div class="deatil-tab-employ tool-tab">
-				<ul class="nav simple nav-tabs" id="simple-design-tab">
-					<li><a href="#settings">State</a></li>
-				</ul>
 				<form class="" method="POST" action= "" enctype="multipart/form-data">
                     {% csrf_token %}
 				<!-- Start All Sec -->
@@ -36,16 +15,16 @@
 						<div class="row no-mrg">
 							<h3>Add State</h3>
 							<div class="edit-pro">
-                                <div class="col-md-4 col-sm-6">
+                                <div class="form-outline mb-4">
 									<label> Id</label>
 									<input type="text" class="form-control"  value="{{pincode.id}}"name="id" id="id" readonly >
 								</div>
-								<div class="col-md-4 col-sm-6">
+								<div class="form-outline mb-4">
 									<label>Pin Code</label>
 									<input type="text" class="form-control"  value="{{pincode.pincode}}"name="pincode" id="pincode" required >
 								</div>
 
-                                <div class="col-md-4 col-sm-6">
+                                <div class="form-outline mb-4">
 									<label>City</label>
 
                                         <select class="form-control" name="city" value="" id="city" required>
