--- a/app/templates/specialization.html
+++ b/app/templates/specialization.html
@@ -3,11 +3,9 @@
 {% load static %}
 
 <!-- Title Header Start -->
-<section class="inner-header-title" style="background-image:url(assets/img/banner-10.jpg);">
-<div><h1>{{title}}</h1></div>
-</section>
-<div><div style="margin:20px"> {{title}} <td><a href="{% url 'app:Add_specialization' %}" class="btn-sm  btn-primary" id="Add" style="float:right;margin-right:60px">Add</a></div></div>
-<table class="my-table">
+
+<div><div style="margin:20px"> <a href="{% url 'app:Add_specialization' %}" class="btn-sm  btn-primary" id="Add" style="float:right;text-decoration: none;">Add</a></div></div>
+<table id="user-roles-records" class="table table-responsive-md table-bordered table-sm table-striped"cellspacing="0" width="100%">
   <thead>
     <tr>
         <th>ID</th>
@@ -33,13 +31,13 @@
       {% endif %}
 
 
-       <td><a href="{% url 'app:edit_specialization' id=item.id %}" class="btn btn-sm btn-primary" id="edit">Edit</a>
+       <td><a href="{% url 'app:edit_specialization' id=item.id %}" class="btn btn-sm btn-success bi bi-pencil-square"id="edit">Edit</a>
          {% if item.status == True %}
-          <a href="{% url 'app:update_specilaization'  action='active' id=item.id  %}" class="btn btn-sm btn-info" id="activbtn">Active </a>
+          <a href="{% url 'app:update_specilaization'  action='active' id=item.id  %}" class="btn btn-sm btn-primary" id="activbtn"><i class="bi bi-eye"></i>Active </a>
             {% else %}
-          <a href="{% url 'app:update_specilaization'  action='deactive' id=item.id %}" class="btn btn-sm btn-warning" id="deactive">Disabled </a>
+          <a href="{% url 'app:update_specilaization'  action='deactive' id=item.id %}" class="btn btn-sm btn-warning" id="deactive"><i class="bi bi-eye-slash"></i>Disabled </a>
           {% endif %}
-         <a href="{% url 'app:delete_spacialization' id=item.id %}" class="btn btn-sm btn-danger" id="delete">Delete</a>
+         <a href="{% url 'app:delete_spacialization' id=item.id %}" class="btn btn-sm btn-danger" id="delete"><i class="bi bi-trash"></i>Delete</a>
 
       </td>
     </tr>
