--- a/app/templates/address/Add_talluk.html
+++ b/app/templates/address/Add_talluk.html
@@ -14,6 +14,15 @@
 					<div id="settings" class="  active">
 						<div class="row no-mrg">
 							<h3>Add Talluk</h3>
+							{% if form.errors %}
+                        <ul class="errorlist">
+                            {% for field in form %}
+                                {% if field.errors %}
+                                    <li style="color:red">{{ field.label }}: {{ field.errors|join:", " }}</li>
+                                {% endif %}
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
 							<div class="edit-pro">
 								<div class="form-outline mb-4">
 									<label>Talluk Name</label>
