--- a/app/templates/address/State_view.html
+++ b/app/templates/address/State_view.html
@@ -49,6 +49,10 @@
     <!-- Add more rows here -->
   </tbody>
 </table>
-
+<script>
+  $(document).ready(function () {
+  $('table').DataTable()
+  });
+</script>
 
 {% endblock %}
