--- a/app/templates/address/Add_dist.html
+++ b/app/templates/address/Add_dist.html
@@ -11,6 +11,15 @@
 			
 						<div class="row no-mrg">
 							<h3>Add Dist</h3>
+							{% if form.errors %}
+                        <ul class="errorlist">
+                            {% for field in form %}
+                                {% if field.errors %}
+                                    <li style="color:red">{{ field.label }}: {{ field.errors|join:", " }}</li>
+                                {% endif %}
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
 							<div class="edit-pro">
 								<div class="form-outline mb-4">
 									<label>District Name</label>
