--- a/app/templates/horzontal_dashboard.html
+++ b/app/templates/horzontal_dashboard.html
@@ -55,21 +55,6 @@
 				  </li>
 				  <li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-					  Qualifications
-					</a>
-					<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<li class="dropdown-item"><a style="text-decoration: none; color:black;" href="{% url 'app:stream_detail_view' %}"> stream</a></li>
-						<li class="dropdown-item"><a style="text-decoration: none; color:black;" href="{%  url 'app:level_view' %}"> level </a></li>
-						<li class="dropdown-item"><a style="text-decoration: none; color:black;" href="{% url 'app:specialization_view' %}"> specialization</a></li>
-						<li class="dropdown-item"><a style="text-decoration: none; color:black;" href="{% url 'app:qualification_view' %}">   Qualifications</a></li>
-						<li class="dropdown-item"><a style="text-decoration: none; color:black;" href="{% url 'app:View_Designation' %}">  Designation</a></li>
-						<li class="dropdown-item"><a style="text-decoration: none; color:black;" href="{% url 'app:View_Committe' %}">  Committe</a></li>
-						<li class="dropdown-item"><a style="text-decoration: none; color:black;" href="{% url 'app:View_fee_catogory' %}">  Fee Catogory</a></li>
-						<li class="dropdown-item"><a style="text-decoration: none; color:black;" href="{% url 'app:View_Entry_type' %}">  Entry Type</a></li>
-					</ul>
-				  </li>
-				  <li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 					 Address
 					</a>
 					<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -114,224 +99,7 @@
 
 
        {% endblock %}
-	   {% comment %} <footer class="dark-footer skin-dark-footer">
-		<div>
-			<div class="container">
-				<div class="row">
-					
-					<div class="col-lg-3 col-md-3">
-						<div class="footer-widget">
-							<img src="assets/img/logo-white.png" class="img-footer" alt="" />
-							<div class="footer-add">
-								<p>KLE Technological University,</br> Vidyanagar,Hubballi,Karnataka,580021</p>
-								<p><strong>Email:</strong></br>pravenyainfotect@gmail.com</p>
-								<p><strong>Call:</strong></br>91 9380370518</p>
-							</div>
-							
-						</div>
-					</div>		
-					<div class="col-lg-2 col-md-2">
-						<div class="footer-widget">
-							<h4 class="widget-title">Navigations</h4>
-							<ul class="footer-menu">
-								<li><a href="home-6.html">New Home Design</a></li>
-								<li><a href="browse-candidate-list.html"></a></li>
-								<li><a href="browse-employer-list.html"></a></li>
-								<li><a href="advance-search-2.html"></a></li>
-								<li><a href="checkout.html"></a></li>
-							</ul>
-						</div>
-					</div>
-							
-					<div class="col-lg-2 col-md-2">
-						<div class="footer-widget">
-							<h4 class="widget-title">The Highlights</h4>
-							<ul class="footer-menu">
-								<li><a href="index-2.html"></a></li>
-								<li><a href="index-3.html"></a></li>
-								<li><a href="index-4.html"></a></li>
-								<li><a href="index-5.html"></a></li>
-								<li><a href="login.html">LogIn</a></li>
-							</ul>
-						</div>
-					</div>
-					
-					<div class="col-lg-2 col-md-2">
-						<div class="footer-widget">
-							<h4 class="widget-title">My Account</h4>
-							<ul class="footer-menu">
-								<li><a href="candidate-dashboard.html">Dashboard</a></li>
-								<li><a href="applications.html">Applications</a></li>
-								<li><a href="packages.html"></a></li>
-								<li><a href="candidate-resume.html">.</a></li>
-								<li><a href="register.html">SignUp Page</a></li>
-							</ul>
-						</div>
-					</div>
-					
-					<div class="col-lg-3 col-md-3">
-						<div class="footer-widget">
-							<h4 class="widget-title">Download Apps</h4>
-							<a href="#" class="other-store-link">
-								<div class="other-store-app">
-									<div class="os-app-icon">
-										<i class="ti-android theme-cl"></i>
-									</div>
-									<div class="os-app-caps">
-										Google Play
-										<span>Get It Now</span>
-									</div>
-								</div>
-							</a>
-							<a href="#" class="other-store-link">
-								<div class="other-store-app">
-									<div class="os-app-icon">
-										<i class="ti-apple theme-cl"></i>
-									</div>
-									<div class="os-app-caps">
-										App Store
-										<span>Now it Available</span>
-									</div>
-								</div>
-							</a>
-						</div>
-					</div>
-					
-				</div>
-			</div>
-		</div>
-		
-		<div class="footer-bottom">
-			<div class="container">
-				<div class="row align-items-center">
-					
-					<div class="col-lg-6 col-md-6">
-						<p class="mb-0">© 2023 SIMS. Designd By <a href="">gourish and Mahaning</a> All Rights Reserved</p>
-					</div>
-					
-					<div class="col-lg-6 col-md-6 text-right">
-						<ul class="footer-bottom-social">
-							<li><a href="#"><i class="ti-facebook"></i></a></li>
-							<li><a href="#"><i class="ti-twitter"></i></a></li>
-							<li><a href="#"><i class="ti-instagram"></i></a></li>
-							<li><a href="#"><i class="ti-linkedin"></i></a></li>
-						</ul>
-					</div>
-					
-				</div>
-			</div>
-		</div>
-	</footer> {% endcomment %}
-
-	{% comment %} <div class="modal fade" id="signup" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2" aria-hidden="true">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-body">
-					
-					<div class="new-logwrap">
-				
-						<div class="form-group">
-							<label>Username</label>
-							<div class="input-with-icon">
-								<input type="text" class="form-control" placeholder="Enter Your Username">
-								<i class="theme-cl ti-user"></i>
-							</div>
-						</div>
-						
-						<div class="form-group">
-							<label>Email</label>
-							<div class="input-with-icon">
-								<input type="email" class="form-control" placeholder="Enter Your Email">
-								<i class="theme-cl ti-email"></i>
-							</div>
-						</div>
-						
-						<div class="form-group">
-							<label>Password</label>
-							<div class="input-with-icon">
-								<input type="password" class="form-control" placeholder="Enter Your Password">
-								<i class="theme-cl ti-lock"></i>
-							</div>
-						</div>
-						
-						<div class="form-groups">
-							<button type="submit" class="btn btn-primary theme-bg full-width">Register</button>
-						</div>
-						
-						<div class="forget-account text-center">
-							<a class="theme-cl" href="#">Forget Password?</a>
-						</div>
-						
-						<div class="social-devider">
-							<span class="line"></span>
-							<span class="circle">Or</span>
-						</div>
-						
-						<div class="social-login row">
-							
-							<div class="col-md-6">
-								<a href="#" class="jb-btn-icon social-login-facebook"><i class="fa fa-facebook"></i>Facebook</a>
-							</div>
-							
-							<div class="col-md-6">
-								<a href="#" class="jb-btn-icon social-login-google"><i class="fa fa-google-plus"></i>Google</a>
-							</div>
-							
-							<div class="col-md-6">
-								<a href="#" class="jb-btn-icon social-login-twitter"><i class="fa fa-twitter"></i>Twitter</a>
-							</div>
-							
-							<div class="col-md-6">
-								<a href="#" class="jb-btn-icon social-login-linkedin"><i class="fa fa-linkedin"></i>Linkedin</a>
-							</div>
-							
-						</div>
-						
-						<div class="register-account text-center">
-							Don't have an account? <a class="theme-cl" href="register.html">Register</a>
-						</div>
-						
-					</div>
-					
-				</div>
-				</div>
-		</div>
-	</div>    {% endcomment %}
-
-	
-	
-
-	{% comment %} <script type="text/javascript" src="{% static '/assets/plugins/js/jquery.min.js' %}"></script>
-	<script type="text/javascript" src="{% static '/assets/plugins/js/viewportchecker.js' %}"></script>
-	<script type="text/javascript" src="{% static '/assets/plugins/js/bootstrap.min.js' %}"></script>
-	<script type="text/javascript" src="{% static '/assets/plugins/js/bootsnav.js' %}"></script>
-	<script type="text/javascript" src="{% static '/assets/plugins/js/select2.min.js' %}"></script>
-	<script type="text/javascript" src="{% static '/assets/plugins/js/wysihtml5-0.3.0.js' %}"></script>
-	<script type="text/javascript" src="{% static '/assets/plugins/js/bootstrap-wysihtml5.js' %}"></script>
-	<script type="text/javascript" src="{% static '/assets/plugins/js/datedropper.min.js' %}"></script>
-	<script type="text/javascript" src="{% static '/assets/plugins/js/dropzone.js' %}"></script>
-	<script type="text/javascript" src="{% static '/assets/plugins/js/loader.js' %}"></script>
-	<script type="text/javascript" src="{% static '/assets/plugins/js/owl.carousel.min.js' %}"></script>
-	<script type="text/javascript" src="{% static '/assets/plugins/js/slick.min.js' %}"></script>
-	<script type="text/javascript" src="{% static '/assets/plugins/js/gmap3.min.js' %}"></script>
-	<script type="text/javascript" src="{% static '/assets/plugins/js/jquery.easy-autocomplete.min.js' %}"></script> {% endcomment %}
-	<!-- Custom Js -->
-	{% comment %} <script src="{% static '/assets/js/custom.js' %}"></script><script type="text/javascript" src="{% static '/assets/plugins/js/counterup.min.js' %}"></script>
-<script src="{% static '/assets/js/jQuery.style.switcher.js' %}"></script>
-<script type="text/javascript">
-	$(document).ready(function() {
-		$('#styleOptions').styleSwitcher();
-	});
-</script> {% endcomment %}
-{% comment %} <script>
-	function openRightMenu() {
-		document.getElementById("rightMenu").style.display = "block";
-	}
-
-	function closeRightMenu() {
-		document.getElementById("rightMenu").style.display = "none";
-	}
-</script> {% endcomment %}
+	   
 <script src="{% static 'assets/common_js/jquery.min.js' %}"></script>
 <script src="{% static 'assets/common_js/popper.min.js' %}"></script>
 <script src="{% static 'assets/common_js/moment.min.js' %}"></script>
@@ -344,6 +112,18 @@
 <script src="{% static 'assets/datatables/dataTables.bootstrap5.min.js' %}"></script>
 <script src="{% static 'assets/datatables/jquery.dataTables.min.js' %}"></script>
 <script src="{% static  'assets/jasny_bootstrap/jasny_bootstrap.min.js' %}"></script>
+<script src="{% static 'javascript/jquery.js' %}"></script>
+<script src="{% static 'assets/js/jquery.js' %}"></script>
+<script src="{% static 'assets/js/jqueyTable.js' %}"></script>
+<script src="{% static 'assets/js/jQueryTable.js' %}"></script>
+
+
+
 </div>
+<script>
+	$(document).ready(function () {
+	$('table').DataTable()
+	});
+  </script>
 </body>
 </html>
